# Compiler_2024_USTC

./: .gitattributes  CMakeLists.txt  README.md  index.html.1  tatus -uno
include/Sysy/: sysy_builder.hpp
include/codegen/: CodeGen.hpp  CodeGenRegister.hpp  CodeGenUtil.hpp  Register.hpp  liverange.hpp  regalloc.hpp
include/common/: ast.hpp  syntax_tree.h
include/lightir/: BasicBlock.hpp  Constant.hpp  Function.hpp  GlobalVariable.hpp  IRBuilder.hpp  Instruction.hpp  Module.hpp  Type.hpp  User.hpp  Value.hpp  ilist.hpp
include/passes/: DeadCode.hpp  Dominators.hpp  FunctionInline.hpp  LoopAnalysis.hpp  LoopInvCM.hpp  LoopInvHoist.hpp  LoopSearch.hpp  LoopSimplify.hpp  LoopUnRoll.hpp  MathSimplify.hpp  Mem2Reg.hpp  gvn.hpp  loop_info.hpp
src/: CMakeLists.txt
src/Sysy/: CMakeLists.txt  sysy.cpp  sysy_builder.cpp
src/codegen/: CMakeLists.txt  CodeGen.cpp  CodeGenRegister.cpp  Register.cpp  liverange.cpp  regalloc.cpp
src/common/: CMakeLists.txt  ast.cpp
src/io/: CMakeLists.txt  io.c  io.h
src/lightir/: BasicBlock.cpp  CMakeLists.txt  Constant.cpp  Function.cpp  GlobalVariable.cpp  IRprinter.cpp  Instruction.cpp  Module.cpp  Type.cpp  User.cpp  Value.cpp
src/logging/: CMakeLists.txt
src/parser/: CMakeLists.txt  lexical_analyzer.c  lexical_analyzer.l  syntax_analyzer.c  syntax_analyzer.h  syntax_analyzer.y
src/passes/: CMakeLists.txt  ConstPropagation.cpp  DeadCode.cpp  Dominators.cpp  FuncInfo.cpp  FunctionInline.cpp  LoopAnalysis.cpp  LoopInvCM.cpp  LoopInvHoist.cpp  LoopSearch.cpp  LoopSimplify.cpp  LoopUnRoll.cpp  MathSimplify.cpp  Mem2Reg.cpp  gvn.cpp  loop_info.cpp
test/: .gitattributes  18_divc.ll  a.ll  b.ll  c.ll  codegen.sh  define_temp.sy  eval_ir.py  eval_result  eval_result2  log.txt  test  test.sh  test.txt  test_hidden.py
test/code_stu/: 00_main.s  03_arr_defn2.s  04_arr_defn3.s  05_arr_defn4.s  06_const_var_defn2.s  07_const_var_defn3.s  08_const_array_defn.s  09_func_defn.s  10_var_defn_func.s  11_add2.s  12_addc.s  13_sub2.s  14_subc.s  15_mul.s  16_mulc.s  17_div.s  18_divc.s  20_rem.s  21_if_test2.s  22_if_test3.s  23_if_test4.s  24_if_test5.s  25_while_if.s  26_while_test1.s  27_while_test2.s  28_while_test3.s  29_break.s  30_continue.s  31_while_if_test1.s  32_while_if_test2.s  33_while_if_test3.s  34_arr_expr_len.s  35_op_priority1.s  36_op_priority2.s  39_op_priority5.s  40_unary_op.s  41_unary_op2.s  42_empty_stmt.s  43_logi_assign.s  44_stmt_expr.s  (+40 more)
test/error_case/: 79_var_name.ll  test
test/final_performance/: .gitattributes
test/functional/: 01_var_defn2.s  09_func_defn.ll  21_if_test2.ll  25.test  25_while_if1.ll  25_while_if2.ll  26_while_test1.ll  38_op_priority4.ll  38_op_priority4.s  57_sort_test31.ll  63_big_int_mul.ll  65_color.ll  80_chaos_token.sy  86_long_code2.s  96_matrix_add.ll  99_matrix_tran.ll  add_cfg.dot  add_dom_tree.dot  deepWhileBr_cfg.dot  deepWhileBr_dom_tree.dot  define_temp.sy  doubleWhile_cfg.dot  doubleWhile_dom_tree.dot  main_cfg.dot  main_dom_tree.dot  test
test/hidden_functional/: 27_scope5.s  38_light2d.s  is_number_cfg.dot
test/performance/: .gitattributes
